// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<form
  className="block "
  onSubmit={[Function]}
>
  <div
    className="mb-4"
  >
    <label>
      Account
    </label>
    <input
      autoCapitalize="off"
      autoComplete="off"
      autoCorrect="off"
      className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
      maxLength={20}
      minLength={3}
      name="account"
      onChange={[Function]}
      onInput={[Function]}
      onInvalid={[Function]}
      required={true}
      spellCheck="false"
      type="text"
      value=""
    />
  </div>
  <div
    className="grid grid-cols-12"
  >
    <div
      className="col-span-12 md:col-span-3 mb-4"
    >
      <label>
        Percent
      </label>
      <input
        className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
        max={100}
        min={0}
        name="percent"
        onChange={[Function]}
        onInput={[Function]}
        onInvalid={[Function]}
        required={true}
        type="number"
        value="10"
      />
    </div>
    <div
      className="col-span-12 md:col-span-7 mb-4"
    >
      <label>
        Automatically power up
      </label>
      <select
        className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 "
        name="auto"
        onChange={[Function]}
        type="select"
        value="yes"
      >
        <option
          value="yes"
        >
          Yes
        </option>
        <option
          value="no"
        >
          No
        </option>
      </select>
    </div>
    <div
      className="col-span-12 md:col-span-2 flex items-end justify-center mb-4"
    >
      <button
        className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2rem] text-sm font-[500] px-2 "
        size="sm"
        style={
          Object {
            "outline": "none",
          }
        }
        type="submit"
      >
        <div>
          Add
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`(2) With table 1`] = `
Array [
  <form
    className="block "
    onSubmit={[Function]}
  >
    <div
      className="mb-4"
    >
      <label>
        Account
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
        maxLength={20}
        minLength={3}
        name="account"
        onChange={[Function]}
        onInput={[Function]}
        onInvalid={[Function]}
        required={true}
        spellCheck="false"
        type="text"
        value=""
      />
    </div>
    <div
      className="grid grid-cols-12"
    >
      <div
        className="col-span-12 md:col-span-3 mb-4"
      >
        <label>
          Percent
        </label>
        <input
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 aria-invalid:border-red"
          max={100}
          min={0}
          name="percent"
          onChange={[Function]}
          onInput={[Function]}
          onInvalid={[Function]}
          required={true}
          type="number"
          value="10"
        />
      </div>
      <div
        className="col-span-12 md:col-span-7 mb-4"
      >
        <label>
          Automatically power up
        </label>
        <select
          className="border-2 rounded-3xl py-2 px-3 w-full outline-none shadow-0 focus:border-gray-500 hover:border-gray-300 duration-300 dark:border-gray-700 dark:hover:border-gray-600 dark:bg-gray-800 "
          name="auto"
          onChange={[Function]}
          type="select"
          value="yes"
        >
          <option
            value="yes"
          >
            Yes
          </option>
          <option
            value="no"
          >
            No
          </option>
        </select>
      </div>
      <div
        className="col-span-12 md:col-span-2 flex items-end justify-center mb-4"
      >
        <button
          className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2rem] text-sm font-[500] px-2 "
          size="sm"
          style={
            Object {
              "outline": "none",
            }
          }
          type="submit"
        >
          <div>
            Add
          </div>
        </button>
      </div>
    </div>
  </form>,
  <div
    className="border dark:border-gray-700 overflow-hidden rounded-xl w-full"
  >
    <table
      className="table-auto border-collapse text-xs sm:text-sm md:text-md w-full route-table"
    >
      <thead>
        <tr
          className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
        >
          <th
            className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-sm text-gray-700 dark:text-white border-r last:border-r-0 p-2 text-xs sm:text-sm md:text-md p-1 sm:p-2 border p-2"
          >
            Account
          </th>
          <th
            className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-sm text-gray-700 dark:text-white border-r last:border-r-0 p-2 text-xs sm:text-sm md:text-md p-1 sm:p-2 border p-2"
          >
            Percent
          </th>
          <th
            className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-sm text-gray-700 dark:text-white border-r last:border-r-0 p-2 text-xs sm:text-sm md:text-md p-1 sm:p-2 border p-2"
          >
            Automatically power up
          </th>
          <th
            className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-sm text-gray-700 dark:text-white border-r last:border-r-0 p-2 text-xs sm:text-sm md:text-md p-1 sm:p-2 border p-2"
          />
        </tr>
      </thead>
      <tbody>
        <tr
          className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
        >
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            bar
          </td>
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            24%
          </td>
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            Yes
          </td>
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            <a
              href="#"
              onClick={[Function]}
              title="Delete"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8.46,11.88L9.87,10.47L12,12.59L14.12,10.47L15.53,11.88L13.41,14L15.53,16.12L14.12,17.53L12,15.41L9.88,17.53L8.47,16.12L10.59,14L8.46,11.88M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </td>
        </tr>
        <tr
          className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
        >
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            baz
          </td>
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            38%
          </td>
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            No
          </td>
          <td
            className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 border p-2"
          >
            <a
              href="#"
              onClick={[Function]}
              title="Delete"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8.46,11.88L9.87,10.47L12,12.59L14.12,10.47L15.53,11.88L13.41,14L15.53,16.12L14.12,17.53L12,15.41L9.88,17.53L8.47,16.12L10.59,14L8.46,11.88M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z"
                  fill="currentColor"
                />
              </svg>
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>,
]
`;
